--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,8 @@
 body
 {
-    color: deeppink;
+    color: rgb(196, 228, 230);
     text-align: center;
     font-family: "Arial";
+    background-color: darkslategray;
 
 }
