--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,20 @@ body
     color: rgb(196, 228, 230);
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
     background-color: darkslategray;
-
+}
+#container
+{
+    width: 35%;
+    padding: 1em;
+    text-align: justify;
+    border: 3px solid coral;
+    margin: 2em auto;
+}
+#container h1
+{
+    font-size: 20px;
 }
