--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: rgb(196, 228, 230);
     text-align: center;
-    font-family: "Arial";
+    font-family: "courier";
     font-size: 16px;
     margin: 0;
     padding: 0;
