--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,15 +1,14 @@
 body
 {
-    color: rgb(17, 17, 17);
+    color: #333;
     text-align: center;
-    font-family: "courier";
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
-    background-color: rgb(247, 248, 248);
 }
 
-#titulitozul
+#cabecera
 {
     background: #33A;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
@@ -17,6 +16,13 @@ body
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
 }
 
 #container
